Added_social_media_links

--- a/Portfolio/Views/Home/About.cshtml
+++ b/Portfolio/Views/Home/About.cshtml
@@ -173,9 +173,9 @@
                 </div>
                 <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
                     <ul class="social m-0 p-0">
-                        <li><a href="https://www.facebook.com" target="_blank"><span class="fa fa-facebook-official"></span></a></li>
+                        <li><a href="https://www.facebook.com/Aqibbaba103" target="_blank"><span class="fa fa-facebook-official"></span></a></li>
                         <li><a href="https://www.linkedin.com/in/aqib-mushtaq-4166232ab/" target="_blank"><span class="fa fa-linkedin-square"></span></a></li>
-                        <li><a href="https://www.instagram.com" target="_blank"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/aqi_mushtaq/" target="_blank"><span class="fa fa-instagram"></span></a></li>
                         @* <li><a href="#twitter"><span class="fa fa-twitter"></span></a></li> *@
                     </ul>
                 </div>
