--- a/Portfolio/Views/Home/Contact.cshtml
+++ b/Portfolio/Views/Home/Contact.cshtml
@@ -26,7 +26,7 @@
                         </div>
                         <div class="cont-right">
                             <h6>Call Me</h6>
-                            <p><a href="tel:+44 99 555 42">+91 7006716296</a></p>
+                            <p><a href="tel:+91 7006716296">+91 7006716296</a></p>
                         </div>
                     </div>
                     <div class="cont-top margin-up">
@@ -35,7 +35,7 @@
                         </div>
                         <div class="cont-right">
                             <h6>Email Me</h6>
-                            <p><a href="mailto:example@mail.com" class="mail">aqibmushtaqbaba@gmail.com</a></p>
+                            <p><a href="mailto:aqibmushtaqbaba@gmail.com" class="mail">aqibmushtaqbaba@gmail.com</a></p>
                         </div>
                     </div>
                     <div class="cont-top margin-up">
@@ -97,9 +97,9 @@
                 </div>
                 <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
                     <ul class="social m-0 p-0">
-                        <li><a href="https://www.facebook.com" target="_blank"><span class="fa fa-facebook-official"></span></a></li>
+                        <li><a href="https://www.facebook.com/Aqibbaba103" target="_blank"><span class="fa fa-facebook-official"></span></a></li>
                         <li><a href="https://www.linkedin.com/in/aqib-mushtaq-4166232ab/" target="_blank"><span class="fa fa-linkedin-square"></span></a></li>
-                        <li><a href="https://www.instagram.com" target="_blank"><span class="fa fa-instagram"></span></a></li>
+                        <li><a href="https://www.instagram.com/aqi_mushtaq/" target="_blank"><span class="fa fa-instagram"></span></a></li>
                         @* <li><a href="#twitter"><span class="fa fa-twitter"></span></a></li> *@
                     </ul>
                 </div>
